# enwik8

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/AC/: AC.cpp  AC.hpp
src/IO/: IO.cpp  IO.hpp
src/LZW/: LZW.cpp  LZW.hpp
src/Model/: ModelInterface.hpp  StaticModel.cpp  StaticModel.hpp
